fix alignment on about, change title font sizes

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -21,7 +21,7 @@ $font-base: "Montserrat", sans-serif;
 $font-size-small: 16px;
 $font-size-med: 20px;
 $font-size-large: 40px;
-$font-size-title: 60px;
+$font-size-title: 52px;
 
 $header-height: 50px;
 
