--- a/src/styles/layout/_bars.scss
+++ b/src/styles/layout/_bars.scss
@@ -21,7 +21,7 @@
   h2 {
     color: $clr-white;
     font-family: $font-base;
-    font-size: 24px;
+    font-size: $font-size-med;
     font-weight: bold;
     margin-bottom: 10px;
     text-align: center;
